PowerAPI integration